test_programs/compile_failure/noirc_frontend_tests_turbofish_errors_if_turbofish_after_module/src/main.nr

    mod moo {
        pub fn foo() {}
    }

    fn main() {
        moo::<i32>::foo();
    }
    